--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.uleth.flickrbrowser.MainActivity"
-    android:id="@+id/coordinatorLayout">
+    tools:context="com.uleth.flickrbrowser.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="394dp"
@@ -40,15 +40,5 @@
         tools:layout_conversion_absoluteHeight="511dp"
         tools:layout_conversion_absoluteWidth="384dp"
         tools:layout_editor_absoluteX="0dp" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_dialog_email"
-        tools:layout_conversion_absoluteHeight="40dp"
-        tools:layout_editor_absoluteY="511dp"
-        tools:layout_editor_absoluteX="328dp"
-        tools:layout_conversion_absoluteWidth="40dp" />
 
 </android.support.constraint.ConstraintLayout>
