--- a/app/src/main/res/layout/browse.xml
+++ b/app/src/main/res/layout/browse.xml
@@ -14,6 +14,7 @@
         android:layout_width="7dp"
         android:layout_height="121dp"
         android:layout_weight="1"
+        android:contentDescription="@string/browse_image_description"
         android:scaleType="fitStart"
         app:srcCompat="@drawable/placeholder" />
 
@@ -24,5 +25,5 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_weight="2"
-        android:text="TextView" />
+        tools:text=" textview" />
 </LinearLayout>
