--- a/app/src/main/res/layout/browse.xml
+++ b/app/src/main/res/layout/browse.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:id="@+id/thumbnail"
         android:layout_width="7dp"
-        android:layout_height="121dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:contentDescription="@string/browse_image_description"
         android:scaleType="fitStart"
