--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,39 +3,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.uleth.flickrbrowser.MainActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="394dp"
-        android:layout_height="75dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme= "@style/AppTheme.AppBarOverlay">
+       <!-- android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_conversion_absoluteHeight="56dp"
         tools:layout_conversion_absoluteWidth="384dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp" -->
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            tools:layout_conversion_absoluteHeight="56dp"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+         <!--   tools:layout_conversion_absoluteHeight="56dp"
             tools:layout_conversion_absoluteWidth="384dp"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+            tools:layout_editor_absoluteY="0dp" -->
 
     </android.support.design.widget.AppBarLayout>
 
-    <include
-        layout="@layout/content_main" />
-        <!--android:layout_width="wrap_content"
+    <include layout="@layout/content_main" />
+    <!--android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="parent"
         tools:layout_conversion_absoluteHeight="511dp"
