--- a/app/src/main/res/layout/content_photo_detail.xml
+++ b/app/src/main/res/layout/content_photo_detail.xml
@@ -48,7 +48,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:padding="8dp"
                     tools:text="TextView" />
 
                 <TextView
@@ -56,7 +55,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    tools:text="TextView" />
+                    tools:text="TextView"
+                    android:contentDescription="@string/browse_image_description"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
