--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -5,8 +5,8 @@
 
     <item
         android:id="@+id/app_bar_search"
-        app:actionViewClass="android.widget_SearchView"
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/activity_search"
+        app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom" />
 </menu>
