--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.uleth.flickrbrowser.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_upload"
         android:orderInCategory="102"
-        android:title="@string/action_settings"
+        android:title="@string/action_upload"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_search"
