--- a/app/src/main/res/layout/browse.xml
+++ b/app/src/main/res/layout/browse.xml
@@ -2,28 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="8dp"
     android:weightSum="3">
 
     <ImageView
         android:id="@+id/thumbnail"
-        android:layout_width="7dp"
-        android:layout_height="wrap_content"
+        android:layout_width="371dp"
+        android:layout_height="350dp"
         android:layout_weight="1"
         android:contentDescription="@string/browse_image_description"
-        android:scaleType="fitStart"
+        android:scaleType="fitCenter"
         app:srcCompat="@drawable/placeholder" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="371dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
         android:layout_weight="2"
         tools:text=" textview" />
 </LinearLayout>
