--- a/app/src/main/res/layout/content_photo_detail.xml
+++ b/app/src/main/res/layout/content_photo_detail.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/accent"
             app:cardCornerRadius="8dp">
 
             <LinearLayout
@@ -37,7 +38,7 @@
                 <ImageView
                     android:id="@+id/photo_image"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="305dp"
                     android:layout_margin="8dp"
                     android:contentDescription="@string/browse_image_description"
                     android:scaleType="fitCenter"
