--- a/app/src/main/res/layout/activity_edit_info.xml
+++ b/app/src/main/res/layout/activity_edit_info.xml
@@ -62,11 +62,11 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:id="@+id/imgpic"
-        android:layout_width="380dp"
-        android:layout_height="257dp"
-        app:srcCompat="@drawable/placeholder"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="1dp" />
+        android:id="@+id/imageView2"
+        android:layout_width="389dp"
+        android:layout_height="206dp"
+        app:srcCompat="@drawable/pic"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="40dp" />
 
 </android.support.constraint.ConstraintLayout>
