--- a/app/src/main/res/layout/browse.xml
+++ b/app/src/main/res/layout/browse.xml
@@ -26,5 +26,6 @@
         android:layout_marginLeft="0dp"
         android:layout_marginStart="0dp"
         android:layout_weight="2"
+        android:textSize="18sp"
         tools:text=" textview" />
 </LinearLayout>
