--- a/app/src/main/res/layout/content_photo_detail.xml
+++ b/app/src/main/res/layout/content_photo_detail.xml
@@ -23,43 +23,48 @@
             android:backgroundTint="@color/accent"
             app:cardCornerRadius="8dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/photo_author"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:autoSizeTextType="uniform"
+                    android:autoText="false"
+                    android:textSize="16sp"
+                    tools:text="TextView" />
+
+                <ImageView
+                    android:id="@+id/photo_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="305dp"
+                    android:layout_margin="8dp"
+                    android:contentDescription="@string/browse_image_description"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/placeholder" />
+
+                <TextView
+                    android:id="@+id/photo_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:textSize="16sp"
+                    tools:text="TextView" />
+
+                <TextView
+                    android:id="@+id/photo_tags"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:contentDescription="@string/browse_image_description"
+                    android:textSize="16sp"
+                    tools:text="TextView" />
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/photo_author"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                tools:text="TextView" />
-
-            <ImageView
-                android:id="@+id/photo_image"
-                android:layout_width="match_parent"
-                android:layout_height="305dp"
-                android:layout_margin="8dp"
-                android:contentDescription="@string/browse_image_description"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/placeholder" />
-
-            <TextView
-                android:id="@+id/photo_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                tools:text="TextView" />
-
-            <TextView
-                android:id="@+id/photo_tags"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:contentDescription="@string/browse_image_description"
-                tools:text="TextView" />
-        </LinearLayout>
     </ScrollView>
 </LinearLayout>
